@@ -43,6 +43,7 @@ In alphabetical order (by last name)
 * Luke Redpath (TextMate bundle)
 * Nick Sieger (RSpec on Rails patches for stats)
 * Daniel Siemssen (RSpec on Rails patches for rails_spec_server)
+* Kouhei Sotu (Emacs patch)
 * Nikolai Weibull (Core patches for spec names)
 * Mike Williams (Core patches for arbitrary comparisons like 5.should_be < 6)
 * Chad Wooley (Patch to mocks to make it possible to specify raised exception instance)
