@@ -117,10 +117,10 @@
       <span class="failed_spec_name">should fail when expected message not received</span>
       <div class="failure" id="failure_1">
         <div class="message"><pre>Mock 'poke me' expected :poke with (any args) once, but received it 0 times</pre></div>
-        <div class="backtrace"><pre>./failing_examples/mocking_example.rb:13
-./spec/spec/runner/formatter/html_formatter_spec.rb:14
-./spec/spec/runner/formatter/html_formatter_spec.rb:10
-./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
+        <div class="backtrace"><pre>./failing_examples/mocking_example.rb:13:
+./spec/spec/runner/formatter/html_formatter_spec.rb:14:
+./spec/spec/runner/formatter/html_formatter_spec.rb:10:
+./spec/spec/runner/formatter/html_formatter_spec.rb:9:</pre></div>
       </div>
     </dd>
     <script type="text/javascript">makeRed('header');</script>
@@ -131,10 +131,10 @@
       <div class="failure" id="failure_2">
         <div class="message"><pre>Mock 'one two three' received :three out of order</pre></div>
         <div class="backtrace"><pre>(eval):3:in `three'
-./failing_examples/mocking_example.rb:22
-./spec/spec/runner/formatter/html_formatter_spec.rb:14
-./spec/spec/runner/formatter/html_formatter_spec.rb:10
-./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
+./failing_examples/mocking_example.rb:22:
+./spec/spec/runner/formatter/html_formatter_spec.rb:14:
+./spec/spec/runner/formatter/html_formatter_spec.rb:10:
+./spec/spec/runner/formatter/html_formatter_spec.rb:9:</pre></div>
       </div>
     </dd>
     <script type="text/javascript">makeRed('header');</script>
@@ -144,10 +144,10 @@
       <span class="failed_spec_name">should get yelled at when sending unexpected messages</span>
       <div class="failure" id="failure_3">
         <div class="message"><pre>Mock 'don't talk to me' expected :any_message_at_all with (any args) 0 times, but received it once</pre></div>
-        <div class="backtrace"><pre>./failing_examples/mocking_example.rb:28
-./spec/spec/runner/formatter/html_formatter_spec.rb:14
-./spec/spec/runner/formatter/html_formatter_spec.rb:10
-./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
+        <div class="backtrace"><pre>./failing_examples/mocking_example.rb:28:
+./spec/spec/runner/formatter/html_formatter_spec.rb:14:
+./spec/spec/runner/formatter/html_formatter_spec.rb:10:
+./spec/spec/runner/formatter/html_formatter_spec.rb:9:</pre></div>
       </div>
     </dd>
   </dl>
@@ -169,10 +169,10 @@ Diff:
 +behaviour driven development
  framework for Ruby
 </pre></div>
-        <div class="backtrace"><pre>./failing_examples/diffing_spec.rb:13
-./spec/spec/runner/formatter/html_formatter_spec.rb:14
-./spec/spec/runner/formatter/html_formatter_spec.rb:10
-./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
+        <div class="backtrace"><pre>./failing_examples/diffing_spec.rb:13:
+./spec/spec/runner/formatter/html_formatter_spec.rb:14:
+./spec/spec/runner/formatter/html_formatter_spec.rb:10:
+./spec/spec/runner/formatter/html_formatter_spec.rb:9:</pre></div>
       </div>
     </dd>
     <script type="text/javascript">makeRed('header');</script>
@@ -198,10 +198,10 @@ Diff:
 +species=tortoise
  &gt;
 </pre></div>
-        <div class="backtrace"><pre>./failing_examples/diffing_spec.rb:34
-./spec/spec/runner/formatter/html_formatter_spec.rb:14
-./spec/spec/runner/formatter/html_formatter_spec.rb:10
-./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
+        <div class="backtrace"><pre>./failing_examples/diffing_spec.rb:34:
+./spec/spec/runner/formatter/html_formatter_spec.rb:14:
+./spec/spec/runner/formatter/html_formatter_spec.rb:10:
+./spec/spec/runner/formatter/html_formatter_spec.rb:9:</pre></div>
       </div>
     </dd>
   </dl>
