@@ -12,7 +12,7 @@ context "SpecdocFormatterFailureDump" do
     set_backtrace(error)
     @reporter.spec_finished("spec", error, "spec")
     @reporter.dump
-    @io.string.should_match(/\ncontext\n- spec \(FAILED - 1\)\n\n1\)\n'context spec' FAILED\nmessage\n\/a\/b\/c\/d\/e.rb:34\n\nFinished in /)
+    @io.string.should_match(/\ncontext\n- spec \(FAILED - 1\)\n\n1\)\n'context spec' FAILED\nmessage\n\/a\/b\/c\/d\/e.rb:34:\n\nFinished in /)
   end
 
   def set_backtrace(error)
