@@ -2,6 +2,7 @@
 
 == HEAD
 
+* Applied [#6798] ensure two ':' in the first backtrace line for Emacs's 'next-error' command (patch from Kouhei Sutou)
 * Added Much nicer reports to generated website
 * Much nicer reports with --format --html (patch from Luke Redpath)
 * Applied [#6959] Calls to render and redirect in controllers should return true
